--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>My HTML-page</title>
+    <title>JS-homework</title>
     <script src="./js/task-1.js" defer></script>
     <script src="./js/task-2.js" defer></script>
     <script src="./js/task-3.js" defer></script>
 </head>
 
 <body>
-    <h1>hello</h1>
+    <h1 style="color: blueviolet; font-size: 42px; text-align: center;">JS Homework #1</h1>
 </body>
 
 </html>
